some problem with redrawing datatable

--- a/asp_hw10_js/asp_hw10_js.csproj
+++ b/asp_hw10_js/asp_hw10_js.csproj
@@ -202,6 +202,7 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.eot" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\customScript.js" />
+    <Content Include="Scripts\dbo.Customers.data.sql" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
